plugins {
    id 'org.springframework.boot' version '2.3.2.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

group = 'com.poc.mockserver'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
//    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation("org.mock-server:mockserver-client-java:5.11.1")
    testImplementation("org.mock-server:mockserver-netty:5.11.1")
}

test {
    useJUnitPlatform()
}


tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}


//buildscript {
//    repositories {
//    }
//    dependencies {
//        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE"
//    }
//}
//
//plugins {
//    id "java"
//    id "application"
//    id "org.springframework.boot" version "2.1.4.RELEASE"
//    id 'io.spring.dependency-management'
//}
//
//mainClassName = 'com.poc.mockserver.Application'
//
//
//sourceCompatibility = JavaVersion.VERSION_11
//targetCompatibility = JavaVersion.VERSION_11
//
//ext {
//    set('springBootAdminVersion', "2.1.5")
//}
//
//dependencyManagement {
//    imports {
//        mavenBom 'org.springframework.boot:spring-boot-dependencies:2.1.4.RELEASE'
//        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR5'
//        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
//    }
//}
//
//dependencies {
//    implementation 'io.springfox:springfox-swagger2:2.9.1'
//    implementation 'io.springfox:springfox-swagger-ui:2.9.1'
//
//    implementation 'br.com.dimed:common-exception:1.0.5.RELEASE'
//    implementation 'org.mybatis:mybatis-spring:2.0.4'
//    implementation 'org.mybatis:mybatis:3.5.4'
//
//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.cloud:spring-cloud-starter-config'
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'de.codecentric:spring-boot-admin-starter-client'
//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//
//    annotationProcessor 'org.projectlombok:lombok:1.18.4'
//    compileOnly 'org.projectlombok:lombok:1.18.4'
//
//    testImplementation('org.springframework.boot:spring-boot-starter-test') {
//        exclude group: 'junit', module: 'junit' //by both name and group
//    }
//    testImplementation 'org.mockito:mockito-junit-jupiter:2.23.4'
//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
//    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
//}
//
//
//allprojects {
//    apply plugin: 'java'
//    apply plugin: "jacoco"
//    apply plugin: 'io.spring.dependency-management'
//    apply plugin: "com.jfrog.artifactory"
//
//    group = "br.com.dimed"
//    version = "1.0.0-SNAPSHOT"
//
//    jacoco {
//        toolVersion = "0.8.2"
//    }
//
//    sourceCompatibility = JavaVersion.VERSION_11
//    targetCompatibility = JavaVersion.VERSION_11
//
//    repositories {
//        maven {
//            setUrl("${artifactory_contextUrl}/gradle-local")
//            credentials {
//                username = "${artifactory_user}"
//                password = "${artifactory_password}"
//            }
//        }
//
//    }
//
//    artifactory {
//        contextUrl = "${artifactory_contextUrl}"
//        resolve {
//            repository {
//                repoKey = 'libs-release'
//                username = "${artifactory_user}"
//                password = "${artifactory_password}"
//                maven = true
//            }
//        }
//    }
//
//    test {
//        useJUnitPlatform()
//    }
//
//    ext {
//        set('springBootAdminVersion', "2.1.5")
//    }
//
//    dependencyManagement {
//        imports {
//            mavenBom 'org.springframework.boot:spring-boot-dependencies:2.1.4.RELEASE'
//            mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR5'
//            mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
//        }
//    }
//
//    dependencies {
//        implementation 'io.springfox:springfox-swagger2:2.9.1'
//        implementation 'io.springfox:springfox-swagger-ui:2.9.1'
//
//        implementation 'br.com.dimed:common-exception:1.0.5.RELEASE'
//        implementation 'org.mybatis:mybatis-spring:2.0.4'
//        implementation 'org.mybatis:mybatis:3.5.4'
//
//        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//        implementation 'org.springframework.boot:spring-boot-starter-web'
//        implementation 'org.springframework.cloud:spring-cloud-starter-config'
//        implementation 'org.springframework.boot:spring-boot-starter-security'
//        implementation 'de.codecentric:spring-boot-admin-starter-client'
//        implementation 'org.springframework.boot:spring-boot-starter-actuator'
//
//        annotationProcessor 'org.projectlombok:lombok:1.18.4'
//        compileOnly 'org.projectlombok:lombok:1.18.4'
//
//        testImplementation('org.springframework.boot:spring-boot-starter-test') {
//            exclude group: 'junit', module: 'junit' //by both name and group
//        }
//        testImplementation 'org.mockito:mockito-junit-jupiter:2.23.4'
//        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
//        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
//    }
//}
//
//
//
//
//
//
//plugins {
//    id 'java'
//}
//
//group 'com.poc'
//version '1.0-SNAPSHOT'
//
//sourceCompatibility = 11
//
//repositories {
//    mavenCentral()
//    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
//
//}
//
//dependencies {
//////    compile group: 'org.mock-server', name: 'mockserver-netty', version: '5.11.1'
//////    compile group: 'org.mock-server', name: 'mockserver-client-java', version: '5.11.1'
////    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
////    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.13'
////
////    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.3.0-alpha5'
////
////
////
////    testCompile group: 'org.mock-server', name: 'mockserver-testing', version: '5.11.1'
////    compile group: 'org.mock-server', name: 'mockserver-client-java', version: '5.11.1'
////    compile group: 'org.mock-server', name: 'mockserver-core', version: '5.11.1'
////
////    testImplementation("org.mock-server:mockserver-client-java:5.11.1")
////    testImplementation("org.mock-server:mockserver-netty:5.11.1")
//
//    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.30'
//
//    testImplementation("org.mock-server:mockserver-client-java:5.11.1")
//    testImplementation("org.mock-server:mockserver-netty:5.11.1")
//    testCompile group: 'junit', name: 'junit', version: '4.12'
//}
